--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -1,7 +1,7 @@
 {
   "robotWidth": 0.9,
   "robotLength": 0.9,
-  "holonomicMode": false,
+  "holonomicMode": true,
   "pathFolders": [],
   "autoFolders": [],
   "defaultMaxVel": 3.0,
@@ -9,23 +9,23 @@
   "defaultMaxAngVel": 720.0,
   "defaultMaxAngAccel": 720.0,
   "defaultNominalVoltage": 12.0,
-  "robotMass": 20.419,
-  "robotMOI": 1.4815,
+  "robotMass": 54.431,
+  "robotMOI": 5.055,
   "robotTrackwidth": 0.762,
-  "driveWheelRadius": 0.076,
-  "driveGearing": 10.71,
-  "maxDriveSpeed": 4.229,
-  "driveMotorType": "NEO",
-  "driveCurrentLimit": 50.0,
+  "driveWheelRadius": 0.051,
+  "driveGearing": 5.27,
+  "maxDriveSpeed": 6.91,
+  "driveMotorType": "vortex",
+  "driveCurrentLimit": 60.0,
   "wheelCOF": 1.2,
-  "flModuleX": 0.273,
-  "flModuleY": 0.273,
-  "frModuleX": 0.273,
-  "frModuleY": -0.273,
-  "blModuleX": -0.273,
-  "blModuleY": 0.273,
-  "brModuleX": -0.273,
-  "brModuleY": -0.273,
+  "flModuleX": 0.3048,
+  "flModuleY": 0.305,
+  "frModuleX": 0.3048,
+  "frModuleY": -0.305,
+  "blModuleX": -0.305,
+  "blModuleY": 0.305,
+  "brModuleX": -0.305,
+  "brModuleY": -0.305,
   "bumperOffsetX": 0.0,
   "bumperOffsetY": 0.0,
   "robotFeatures": []
