--- a/build.gradle
+++ b/build.gradle
@@ -73,7 +73,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-    implementation 'org.apache.commons:commons-lang3:3.14.0' // Use the latest stable version
+    implementation 'org.apache.commons:commons-lang3:3.20.0'
 }
 
 test {
